--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "glob": "~4.0.5",
     "async": "~0.9.0",
     "nodemailer": "~1.3.0",
-    "socket.io": "~1.2.0"
+    "socket.io": "~1.2.0",
+    "q": "~1.1.1",
+    "node-schedule": "0.1.13",
+    "grunt-contrib-sass": "~0.8.1"
   },
   "devDependencies": {
     "supertest": "~0.14.0",
